Collections save with a basedir and relative addressing. Picture Viewer closes when Esc is hit. Sha256 progress bar window automatically closes after 3 Seconds.